cabal-version:      3.0
name:               dapr-core
version:            0.1.0.0
description:        Please see the README on Github at <https://github.com/nodew/haskell-dapr#readme>
homepage:           https://github.com/nodew/haskell-dapr#readme
bug-reports:        https://github.com/nodew/haskell-dapr/issues
license:            Apache-2.0
license-file:       LICENSE
author:             Qiao Wang
maintainer:         wangqiao11@hotmail.com
copyright:          2022 Qiao Wang
category:           Web
build-type:         Simple
extra-source-files: CHANGELOG.md
                  , README.md
tested-with: GHC == { 9.10.1, 9.8.4, 9.6.7 }

common lib
    build-depends:
          base >= 4.18 && < 5
        , aeson >=2.1
        , bytestring >=0.10
        , containers >=0.7
        , exceptions >=0.10
        , extra >=1.7
        , http-types >=0.12
        , mtl >=2.3
        , req >=3.10
        , text >=1.2
        , time >=1.9
        , unliftio-core >=0.1.1
        , uuid >=1.3
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    default-extensions:
          OverloadedStrings
        , DataKinds
        , DeriveGeneric
        , DeriveAnyClass
        , DuplicateRecordFields
        , RecordWildCards
library
    import: lib
    exposed-modules:  Dapr.Core.Types
                    , Dapr.Core.Types.Actor
                    , Dapr.Core.Types.Configuration
                    , Dapr.Core.Types.Common
                    , Dapr.Core.Types.Conversation
                    , Dapr.Core.Types.Cryptography
                    , Dapr.Core.Types.DistributedLock
                    , Dapr.Core.Types.Metadata
                    , Dapr.Core.Types.Secrets
                    , Dapr.Core.Types.Scheduler
                    , Dapr.Core.Types.State
                    , Dapr.Core.Types.Binding
                    , Dapr.Core.Types.PublishSubscribe
                    , Dapr.Core.Types.Internal
                    , Dapr.Core.Types.ServiceInvocation
                    , Dapr.Core.Types.Workflow
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite dapr-core-test
    import: lib
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    other-modules:  , Dapr.Core.Types.SerializationSpec
                    , Paths_dapr_core
    build-depends:    dapr-core
                    , hspec >=2.11
                    , hspec-core >=2.11
                    , QuickCheck >=2.14
                    , aeson-pretty >=0.8
                    , filepath >=1.4
                    , hspec-golden >=0.2
