cabal-version:      >=1.10
name:               dapr-grpc-client
version:            0.1.0.0
description:        Please see the README on Github at <https://github.com/nodew/haskell-dapr#readme>
homepage:           https://github.com/nodew/haskell-dapr#readme
bug-reports:        https://github.com/nodew/haskell-dapr/issues
license:            Apache-2.0
license-file:       LICENSE
author:             Qiao Wang
maintainer:         wangqiao11@hotmail.com
copyright:          2022 Qiao Wang
category:           Web
build-type:         Simple
extra-source-files: CHANGELOG.md
                  , README.md
-- tested-with:        GHC == { 9.4.2, 9.0.2, 8.10.7, 8.8.4 }

source-repository head
    type: git
    location: https://github.com/nodew/haskell-dapr

library
    exposed-modules:  
        MyLib
        , GrpcClient
        , Schema.Schema

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-extensions:
      OverloadedStrings
      DataKinds
      DeriveGeneric
      DeriveAnyClass
      DuplicateRecordFields
    build-depends:    
        base >=4.12 && <5
        , text            
        , mu-grpc-server  >=0.4.0
        , mu-protobuf     >=0.4.0
        , mu-rpc          >=0.4.0
        , mu-schema       >=0.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite dapr-grpc-client-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    ghc-options:      -Wall
    main-is:          MyLibTest.hs
    build-depends:    
      aeson
      , base            >=4.12  && <5
      , text
      , mu-grpc-server  >=0.4.0
      , mu-protobuf     >=0.4.0
      , mu-rpc          >=0.4.0
      , mu-schema       >=0.3.0
      

