cabal-version:      3.0
name:               dapr-http-client
version:            0.1.0.0
description:        Please see the README on Github at <https://github.com/nodew/haskell-dapr#readme>
homepage:           https://github.com/nodew/haskell-dapr#readme
bug-reports:        https://github.com/nodew/haskell-dapr/issues
author:             Qiao Wang
maintainer:         wangqiao11@hotmail.com
copyright:          2022 Qiao Wang
license:            Apache-2.0
license-file:       LICENSE
category:           Web
build-type:         Simple
extra-source-files: ChangeLog.md
                  , README.md
tested-with: GHC == { 9.4.2, 9.0.2, 8.10.7, 8.8.4 }

source-repository head
  type: git
  location: https://github.com/nodew/haskell-dapr

common lib
  build-depends:
      aeson ^>={ 2.0.3, 2.1.0 }
    , base >=4.11 && <5
    , bytestring ^>={ 0.10.12, 0.11.3 }
    , containers ^>=0.6.4
    , exceptions ^>=0.10.4
    , extra ^>=1.7.10
    , req >=3.10.0 && <3.14
    , text ^>={ 1.2.5, 2.0.1 }
    , mu-grpc-server  >=0.4.0
    , mu-protobuf     >=0.4.0
    , mu-rpc          >=0.4.0
    , mu-schema       >=0.3.1
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
  default-extensions:
      OverloadedStrings
      DataKinds
      DeriveGeneric
      DeriveAnyClass
      DuplicateRecordFields

common test-deps
  build-depends:
      dapr-http-client
    , hspec ^>={ 2.8.5, 2.9.7, 2.10.4 }
    , hspec-core ^>={ 2.8.5, 2.9.7, 2.10.4 }
    , QuickCheck ^>=2.14.0
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N

library
  import: lib
  exposed-modules:
      Dapr.Client.HttpClient
      Dapr.Client.HttpClient.Actor
      Dapr.Client.HttpClient.Configuration
      Dapr.Client.HttpClient.DistributedLock
      Dapr.Client.HttpClient.Health
      Dapr.Client.HttpClient.Metadata
      Dapr.Client.HttpClient.PubSub
      Dapr.Client.HttpClient.Req
      Dapr.Client.HttpClient.Secrets
      Dapr.Client.HttpClient.ServiceInvocation
      Dapr.Client.HttpClient.StateManagement
      Dapr.Client.HttpClient.OutputBinding
      Dapr.Client.HttpClient.Types
      Dapr.Client.HttpClient.Types.Actor
      Dapr.Client.HttpClient.Types.Configuration
      Dapr.Client.HttpClient.Types.Core
      Dapr.Client.HttpClient.Types.DistributedLock
      Dapr.Client.HttpClient.Types.Metadata
      Dapr.Client.HttpClient.Types.Secrets
      Dapr.Client.HttpClient.Types.State
      Dapr.Client.HttpClient.Types.Binding
      Dapr.Client.HttpClient.Types.PublishSubscribe
      Dapr.Client.GrpcClient
      Dapr.Client.GrpcClient.Schema.Schema
  other-modules:
      Dapr.Client.HttpClient.Internal
      Dapr.Client.HttpClient.Types.Internal
  hs-source-dirs:
      src
  default-language: Haskell2010

test-suite dapr-http-client-test-e2e
  import: lib, test-deps
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Dapr.Client.HttpClientSpec
      Paths_dapr_http_client
  hs-source-dirs:
      test/e2e
  default-language: Haskell2010

test-suite dapr-http-client-test-unit
  import: lib, test-deps
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Dapr.Client.HttpClient.SerializationSpec
      Paths_dapr_http_client
  hs-source-dirs:
      test/unit
  build-depends:
      aeson-pretty ^>=0.8.9
    , filepath ^>=1.4.2
    , hspec-golden ^>=0.2.0
  default-language: Haskell2010
