cabal-version:      3.0
name:               dapr-proto
version:            0.1.0.0
description:        Please see the README on Github at <https://github.com/nodew/haskell-dapr#readme>
homepage:           https://github.com/nodew/haskell-dapr#readme
bug-reports:        https://github.com/nodew/haskell-dapr/issues
license:            Apache-2.0
license-file:       LICENSE
author:             Qiao Wang
maintainer:         wangqiao11@hotmail.com
copyright:          2022 Qiao Wang
category:           Web
build-type:         Custom
extra-source-files: ChangeLog.md
                  , README.md
                  , proto/**/*.proto
tested-with: GHC == { 9.10.1, 9.8.2, 9.6.6 }

source-repository head
    type: git
    location: https://github.com/nodew/haskell-dapr

custom-setup
  setup-depends:
      base             >= 4.14 && < 5
    , Cabal            >= 3.0  && < 4
    , proto-lens-setup >= 0.4  && < 0.5

common lang
  build-depends:    base >= 4.14 && < 5
  default-language: Haskell2010
  ghc-options:      -Wall

  if impl(ghc >= 9.0)
    ghc-options:
      -Wunused-packages

  default-extensions:
      DataKinds
      OverloadedLabels
      OverloadedStrings
      TypeApplications
      TypeFamilies

library
  import:             lang
  -- hs-source-dirs:     src
  build-tool-depends: proto-lens-protoc:proto-lens-protoc

  build-depends:
    , grapesy            >= 1.0 && < 1.1
    , proto-lens-runtime >= 0.7 && < 0.8

  exposed-modules:
    -- Google built-in protos
      Proto.Google.Protobuf.Any
    , Proto.Google.Protobuf.Any_Fields
    , Proto.Google.Protobuf.Empty
    , Proto.Google.Protobuf.Empty_Fields
    , Proto.Google.Protobuf.Struct
    , Proto.Google.Protobuf.Struct_Fields
    , Proto.Google.Protobuf.Timestamp
    , Proto.Google.Protobuf.Timestamp_Fields
    , Proto.Google.Protobuf.Duration
    , Proto.Google.Protobuf.Duration_Fields

    -- Dapr protos
    , Proto.Dapr.Proto.Common.V1.Common
    , Proto.Dapr.Proto.Common.V1.Common_Fields
    , Proto.Dapr.Proto.Components.V1.Bindings
    , Proto.Dapr.Proto.Components.V1.Bindings_Fields
    , Proto.Dapr.Proto.Components.V1.Common
    , Proto.Dapr.Proto.Components.V1.Common_Fields
    , Proto.Dapr.Proto.Components.V1.Pubsub
    , Proto.Dapr.Proto.Components.V1.Pubsub_Fields
    , Proto.Dapr.Proto.Components.V1.Secretstore
    , Proto.Dapr.Proto.Components.V1.Secretstore_Fields
    , Proto.Dapr.Proto.Components.V1.State
    , Proto.Dapr.Proto.Components.V1.State_Fields
    , Proto.Dapr.Proto.Operator.V1.Operator
    , Proto.Dapr.Proto.Operator.V1.Operator_Fields
    , Proto.Dapr.Proto.Operator.V1.Resource
    , Proto.Dapr.Proto.Operator.V1.Resource_Fields
    , Proto.Dapr.Proto.Placement.V1.Placement
    , Proto.Dapr.Proto.Placement.V1.Placement_Fields
    , Proto.Dapr.Proto.Runtime.V1.Dapr
    , Proto.Dapr.Proto.Runtime.V1.Dapr_Fields
    , Proto.Dapr.Proto.Runtime.V1.Appcallback
    , Proto.Dapr.Proto.Runtime.V1.Appcallback_Fields
    , Proto.Dapr.Proto.Scheduler.V1.Failurepolicy
    , Proto.Dapr.Proto.Scheduler.V1.Failurepolicy_Fields
    , Proto.Dapr.Proto.Scheduler.V1.Scheduler
    , Proto.Dapr.Proto.Scheduler.V1.Scheduler_Fields
    , Proto.Dapr.Proto.Sentry.V1.Sentry
    , Proto.Dapr.Proto.Sentry.V1.Sentry_Fields
  autogen-modules:
    -- Google built-in protos
      Proto.Google.Protobuf.Any
    , Proto.Google.Protobuf.Any_Fields
    , Proto.Google.Protobuf.Empty
    , Proto.Google.Protobuf.Empty_Fields
    , Proto.Google.Protobuf.Struct
    , Proto.Google.Protobuf.Struct_Fields
    , Proto.Google.Protobuf.Timestamp
    , Proto.Google.Protobuf.Timestamp_Fields
    , Proto.Google.Protobuf.Duration
    , Proto.Google.Protobuf.Duration_Fields

    -- Dapr protos
    , Proto.Dapr.Proto.Common.V1.Common
    , Proto.Dapr.Proto.Common.V1.Common_Fields
    , Proto.Dapr.Proto.Components.V1.Bindings
    , Proto.Dapr.Proto.Components.V1.Bindings_Fields
    , Proto.Dapr.Proto.Components.V1.Common
    , Proto.Dapr.Proto.Components.V1.Common_Fields
    , Proto.Dapr.Proto.Components.V1.Pubsub
    , Proto.Dapr.Proto.Components.V1.Pubsub_Fields
    , Proto.Dapr.Proto.Components.V1.Secretstore
    , Proto.Dapr.Proto.Components.V1.Secretstore_Fields
    , Proto.Dapr.Proto.Components.V1.State
    , Proto.Dapr.Proto.Components.V1.State_Fields
    , Proto.Dapr.Proto.Operator.V1.Operator
    , Proto.Dapr.Proto.Operator.V1.Operator_Fields
    , Proto.Dapr.Proto.Operator.V1.Resource
    , Proto.Dapr.Proto.Operator.V1.Resource_Fields
    , Proto.Dapr.Proto.Placement.V1.Placement
    , Proto.Dapr.Proto.Placement.V1.Placement_Fields
    , Proto.Dapr.Proto.Runtime.V1.Dapr
    , Proto.Dapr.Proto.Runtime.V1.Dapr_Fields
    , Proto.Dapr.Proto.Runtime.V1.Appcallback
    , Proto.Dapr.Proto.Runtime.V1.Appcallback_Fields
    , Proto.Dapr.Proto.Scheduler.V1.Failurepolicy
    , Proto.Dapr.Proto.Scheduler.V1.Failurepolicy_Fields
    , Proto.Dapr.Proto.Scheduler.V1.Scheduler
    , Proto.Dapr.Proto.Scheduler.V1.Scheduler_Fields
    , Proto.Dapr.Proto.Sentry.V1.Sentry
    , Proto.Dapr.Proto.Sentry.V1.Sentry_Fields

