cabal-version:      3.0
name:               http-pubsub-example
version:            0.1.0.0
description:        Please see the README on Github at <https://github.com/nodew/haskell-dapr#readme>
homepage:           https://github.com/nodew/haskell-dapr#readme
bug-reports:        https://github.com/nodew/haskell-dapr/issues
author:             Qiao Wang
maintainer:         wangqiao11@hotmail.com
copyright:          2022 Qiao Wang
license:            Apache-2.0
license-file:       LICENSE
category:           Web
build-type:         Simple
extra-source-files: ChangeLog.md

source-repository head
  type: git
  location: https://github.com/nodew/haskell-dapr

executable http-pubsub-example
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
