cabal-version:      3.0
name:               http-pubsub-example
version:            0.1.0.0
description:        Please see the README on Github at <https://github.com/nodew/haskell-dapr#readme>
homepage:           https://github.com/nodew/haskell-dapr#readme
bug-reports:        https://github.com/nodew/haskell-dapr/issues
author:             Qiao Wang
maintainer:         wangqiao11@hotmail.com
copyright:          2022 Qiao Wang
license:            Apache-2.0
license-file:       LICENSE
category:           Web
build-type:         Simple
extra-source-files: ChangeLog.md

source-repository head
  type: git
  location: https://github.com/nodew/haskell-dapr

executable http-pubsub-example
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    aeson ^>={ 2.0.3, 2.1.0 }
                    , base >=4.11 && <5
                    , bytestring ^>={ 0.10.12, 0.11.3 }
                    , containers ^>=0.6.4
                    , dapr-http-client
                    , dapr-http-server
                    , http-types ^>=0.12.3
                    , text ^>={ 1.2.5, 2.0.1 }
                    , wai ^>=3.2.3
                    , warp ^>=3.3.22
    hs-source-dirs:   app
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    default-extensions:
        OverloadedStrings
    default-language: Haskell2010
